# Teams-Lite-for-Linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/: dev.tfl.teams-for-linux.appdata.xml  tfl.desktop
data/themes/: catppuccin-mocha.css  yaru-dark.css
packaging/: PKGBUILD  build-cef-source.sh  build-local.sh  download-cef.sh
src/: app.cc  app.h  client.cc  client.h  config.cc  config.h  idle.cc  idle.h  main.cc  notifications.cc  notifications.h  openh264.cc  openh264.h  theme.cc  theme.h  tray.cc  tray.h  webrtc_fix.cc  webrtc_fix.h  window.cc  window.h
